1. 생성자 및 함수 추가 (*.h -> *.hpp)
2. 변수 타입 변경
 * u_int16_t -> uint16_t
 * UCHAR -> uint8_t

3. tcphdr.hpp 추가

--- a/src/PacketTracer/PacketTracer.vcxproj
+++ b/src/PacketTracer/PacketTracer.vcxproj
@@ -167,9 +167,10 @@
   <ItemGroup>
     <ClInclude Include="arphdr.h" />
     <ClInclude Include="ethhdr.h" />
-    <ClInclude Include="iphdr.h" />
+    <ClInclude Include="iphdr.hpp" />
     <ClInclude Include="PacketTracer.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="tcphdr.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
