--- a/src/PacketTracer/PacketTracer.vcxproj.filters
+++ b/src/PacketTracer/PacketTracer.vcxproj.filters
@@ -24,6 +24,12 @@
     <ClCompile Include="PacketTracer.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="ip.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="mac.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
@@ -32,16 +38,22 @@
     <ClInclude Include="PacketTracer.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="arphdr.h">
+    <ClInclude Include="ethhdr.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="ethhdr.h">
+    <ClInclude Include="arphdr.hpp">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="iphdr.hpp">
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="tcphdr.hpp">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="ip.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="mac.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
