--- a/src/PacketTracer/PacketTracer.vcxproj
+++ b/src/PacketTracer/PacketTracer.vcxproj
@@ -71,24 +71,24 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <ExternalIncludePath>$(ProjectDir)..\..\include\npcap\;$(ExternalIncludePath)</ExternalIncludePath>
+    <ExternalIncludePath>$(ProjectDir)..\..\include\npcap\;$(ProjectDir)..\..\include\network_headers\;$(ExternalIncludePath)</ExternalIncludePath>
     <OutDir>$(ProjectDir)..\..\Build\$(Platform)$(Configuration)\</OutDir>
-    <IntDir>$(ProjectDir)..\..\Output\$(Platform)$(Configuration)\</IntDir>
+    <IntDir>$(ProjectDir)..\..\Output\$(Platform)$(Configuration)\$(ProjectName)</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <ExternalIncludePath>$(ProjectDir)..\..\include\npcap\;$(ExternalIncludePath)</ExternalIncludePath>
+    <ExternalIncludePath>$(ProjectDir)..\..\include\npcap\;$(ProjectDir)..\..\include\network_headers\;$(ExternalIncludePath)</ExternalIncludePath>
     <OutDir>$(ProjectDir)..\..\Build\$(Platform)$(Configuration)\</OutDir>
-    <IntDir>$(ProjectDir)..\..\Output\$(Platform)$(Configuration)\</IntDir>
+    <IntDir>$(ProjectDir)..\..\Output\$(Platform)$(Configuration)\$(ProjectName)</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <ExternalIncludePath>$(ProjectDir)..\..\include\npcap\;$(ExternalIncludePath)</ExternalIncludePath>
+    <ExternalIncludePath>$(ProjectDir)..\..\include\npcap\;$(ProjectDir)..\..\include\network_headers\;$(ExternalIncludePath)</ExternalIncludePath>
     <OutDir>$(ProjectDir)..\..\Build\$(Platform)$(Configuration)\</OutDir>
-    <IntDir>$(ProjectDir)..\..\Output\$(Platform)$(Configuration)\</IntDir>
+    <IntDir>$(ProjectDir)..\..\Output\$(Platform)$(Configuration)\$(ProjectName)</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <ExternalIncludePath>$(ProjectDir)..\..\include\npcap\;$(ExternalIncludePath)</ExternalIncludePath>
+    <ExternalIncludePath>$(ProjectDir)..\..\include\npcap\;$(ProjectDir)..\..\include\network_headers\;$(ExternalIncludePath)</ExternalIncludePath>
     <OutDir>$(ProjectDir)..\..\Build\$(Platform)$(Configuration)\</OutDir>
-    <IntDir>$(ProjectDir)..\..\Output\$(Platform)$(Configuration)\</IntDir>
+    <IntDir>$(ProjectDir)..\..\Output\$(Platform)$(Configuration)\$(ProjectName)</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -160,21 +160,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="ip.cpp" />
-    <ClCompile Include="mac.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="PacketTracer.cpp" />
     <ClCompile Include="pch.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="arphdr.hpp" />
-    <ClInclude Include="ethhdr.h" />
-    <ClInclude Include="ip.h" />
-    <ClInclude Include="iphdr.hpp" />
-    <ClInclude Include="mac.h" />
     <ClInclude Include="PacketTracer.h" />
     <ClInclude Include="pch.h" />
-    <ClInclude Include="tcphdr.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
